--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,13 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
+    /* font-family: 'Montserrat-Medium,sans-serif'; */
+    font-family: 'Montserrat-Medium';
+    color: #282828;
+    font-size: 13px;
+    line-height: 1.5;
 }
 
 a {
